# routes/modules/book.php
@@ -3,6 +3,7 @@
 use Illuminate\Support\Facades\Route;
 
 Route::controller(\App\Http\Controllers\V1\Book\BookController::class)
+    ->middleware('auth:sanctum')
     ->name('books.')
     ->prefix('books')
     ->group(function () {
